src/objects/Territory_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Territory Snapshots</relationshipLabel>
        <relationshipName>Territory_Snapshots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Information_Captured__c</fullName>
        <label>Date Information Captured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <label>Primary Selling Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Model__c</fullName>
        <label>Territory Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <label>Territory Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Full_Name__c</fullName>
        <label>User: Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Territory Snapshot</label>
    <nameField>
        <label>Territory Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>